play with Content_txt.scss; fixe va with align-item: center

--- a/src/Content_txt.scss
+++ b/src/Content_txt.scss
@@ -1,4 +1,15 @@
 header {
   display: flex;
   align-items: center;
+  h1 {
+    margin-right: .3em;
+  }
+  span {
+    width: 40px; height: 40px;
+    // fx with flexbox
+    line-height: 40px;
+    border-radius: 100%;
+    color: #ffffff;
+    background-color: #ccc;
+  }
 }
